syntax = "proto3";

option java_package = "nl.trifork.grpc.calculator";

option java_multiple_files = true;

message CalculatorRequest {
    double number1 = 1;
    double number2 = 2;
    OperationType operation = 3;

    enum OperationType {
        ADD = 0;
        SUBTRACT = 1;
        MULTIPLY = 2;
        DIVIDE = 3;
    }
}

message CalculatorResponse {
    double result = 1;
}

service Calculator {
    rpc Calculate(CalculatorRequest) returns (CalculatorResponse) {}
}

service ServerStreamingCalculator {
    rpc Calculator(CalculatorRequest) returns (stream CalculatorResponse) {}
}

service ClientStreamingCalculator {
    rpc Calculator(stream CalculatorRequest) returns (CalculatorResponse) {}
}

service BidirectionalStreamingCalculator {
    rpc Calculator(stream CalculatorRequest) returns (stream CalculatorResponse) {}
}

